syntax = "proto3";

package snapshot_service;

// ============================================================================
// Snapshot Transfer Service
// ============================================================================
// Used for transferring snapshots from Leader to Follower.

/// Snapshot transfer service
service SnapshotService {
  /// Pull snapshot data (server streaming)
  /// Follower actively pulls snapshot data from Leader after receiving
  /// InstallSnapshotRequest This allows Follower to control the transfer rate
  /// and support resume from offset
  rpc PullSnapshotData(PullSnapshotDataRequest)
      returns (stream PullSnapshotDataResponse);

  /// Query transfer progress
  rpc GetTransferProgress(GetTransferProgressRequest)
      returns (GetTransferProgressResponse);
}

/// Pull snapshot data request
/// Sent by Follower to Leader to request snapshot data chunks
message PullSnapshotDataRequest {
  /// Raft group ID (shard ID in multi-raft context)
  string raft_group_id = 1;
  /// Snapshot index (from InstallSnapshotRequest.last_included_index)
  uint64 snapshot_index = 2;
  /// Snapshot term (from InstallSnapshotRequest.last_included_term)
  uint64 snapshot_term = 3;
  /// Snapshot request ID (from InstallSnapshotRequest.snapshot_request_id)
  uint64 snapshot_request_id = 4;
  /// Starting chunk index (for resume/retry, 0 for first request)
  /// This is a chunk index, not a byte offset. Leader will start streaming from this chunk.
  uint32 chunk_index = 5;
  /// Maximum chunk size in bytes (hint for Leader, typically 1MB)
  uint32 max_chunk_size = 6;
  /// Transfer ID (unique identifier for this transfer, generated by Follower)
  string transfer_id = 7;
}

/// Pull snapshot data response (one chunk)
/// Streamed from Leader to Follower
message PullSnapshotDataResponse {
  /// Transfer ID (matches request)
  string transfer_id = 1;
  /// Chunk data (typically 1MB per chunk)
  bytes chunk_data = 2;
  /// Starting byte offset of this chunk in the snapshot data stream
  /// This indicates where this chunk starts in the overall snapshot byte stream
  uint64 offset = 3;
  /// Chunk size in bytes
  uint32 chunk_size = 4;
  /// Whether this is the last chunk
  bool is_last_chunk = 5;
  /// Total snapshot size in bytes (only in first chunk)
  uint64 total_size = 6;
  /// Chunk checksum (CRC32 or SHA256)
  bytes checksum = 7;
  /// Error message (if failed, stream will end)
  string error_message = 8;
}

/// Get transfer progress request
message GetTransferProgressRequest {
  /// Transfer ID
  string transfer_id = 1;
}

/// Get transfer progress response
message GetTransferProgressResponse {
  /// Transfer status
  TransferStatus status = 1;
  /// Total bytes received
  uint64 received_bytes = 2;
  /// Total bytes expected
  uint64 total_bytes = 3;
  /// Number of chunks received
  uint32 received_chunks = 4;
  /// Total number of chunks
  uint32 total_chunks = 5;
  /// Error message (if failed)
  string error_message = 6;
}

/// Transfer status
enum TransferStatus {
  TRANSFER_STATUS_UNSPECIFIED = 0;
  /// Transfer in progress
  IN_PROGRESS = 1;
  /// Transfer completed successfully
  COMPLETED = 2;
  /// Transfer failed
  FAILED = 3;
  /// Transfer not found
  NOT_FOUND = 4;
}

